# Mac_file

./: .process.txt.swp  README.md
C++/TRY01/: CMakeLists.txt  main  test-start  test.cpp
C++/TRY01/main.dSYM/Contents/Resources/DWARF/: main
YOLOV5/: train.py  train2017.cache
image_misson/yolov5s/: .show.py.swo  .show.py.swp  .yolo_class.py.swo  .yolo_class.py.swp  .yolov5_cam.py.swo  .yolov5_cam.py.swp  1.py  Depth_Cam.py  Det_Gui.py  MainWindow.py  Target.txt  Web_Cam.py  gui.py  init.txt  main.py  rs.py  untitled.py  yolo_class.py  yololayer.h  yolov5_cam.py  yolov5_trt.py
image_misson/yolov5s/Dead/: gui.py  show.py
image_misson/yolov5s/MNB/MNB/: show.py
image_misson/yolov5s/build2/: CMakeCache.txt  Makefile  cmake_install.cmake  yolov5
image_misson/yolov5s/build_Org/: Makefile  cmake_install.cmake  yolov5
opencv/: CVScharr.py  CVSobel.py  OPenCV-Config  base.py  bb.py  demo.py  env.md  environment.py  grey_opencv .py  open_Robo  robo.py
opencv/python-opencv/: Calibration_Opencv.py  PNPtest.py  SecColor.py  SecShape.py  grab.py  main.py  pre_test.py  read.py  ser.py  test.py
opencv/python-opencv/Resources/: 能量机关第一视角视频3.avi
openmv/定位OPENMV/: main.py  openmv2.py.autosave
openmv/巡线OPENMV/: main.py
